fix: 修正錢包的規格文件缺少初始餘額的限制的問題

--- a/doc/spec/v1/2-錢包.md
+++ b/doc/spec/v1/2-錢包.md
@@ -121,7 +121,7 @@
 | 欄位      | 預設值 | 提示 | 限制          | 預計實現版本 | 備註                               |
 |---------|-----|----|-------------|--------|----------------------------------|
 | 名稱      |     |    | 必填，最多10個全形字 |        | 不可重複                             |
-| 初始餘額    |     |    |             |        |                                  |
+| 初始餘額    | 0   |    | 必填，必須大於等於0  |        |                                  |
 | 設定為預設錢包 | 不勾選 |    |             |        |                                  |
 | 預設錢包    |     |    |             |        | 將預設錢包的名稱顯示出來                     |
 | 確認      |     |    |             |        | 若勾選"選擇替代錢包"時，若未選擇錢包的話，Disable此按鈕 |
