fix: 調整週期記帳的規格文件的功能介紹排版

--- a/doc/spec/v1/3-週期記帳.md
+++ b/doc/spec/v1/3-週期記帳.md
@@ -8,8 +8,7 @@
 
 由於現在市面上有著大量訂閱制服務，使用者可藉由此功能來新增這些週期性的固定收支，達到節省手動記帳的目的
 
-目前僅支援每年、每月這兩種頻率，除此之外也可以選擇具體為哪一天，例如每年的二月十五日、每月的五號，若選擇的天數不是每一年(
-例如02/29)，或者不是每一個月都有(31號)，則預設會以該月的最後一天當代表新增
+目前僅支援每年、每月這兩種頻率，除此之外也可以選擇具體為哪一天，例如每年的二月十五日、每月的五號，若選擇的天數不是每一年(例如02/29)，或者不是每一個月都有(31號)，則預設會以該月的最後一天當代表新增
 
 例如使用者選擇02/29，則在2025年時會自動在二月的最後一天，也就是02/28日新增記帳記錄
 
